# BlackHoleTracer

./: CMakeLists.txt  README.md
data/: beautiful.json
src/: Camera.h  Ray.h  Tracer.cpp  Tracer.h  constants.h  main.cpp
src/config/: Config.cpp  Config.h  Config.tcc
src/scene/: BaseSceneObject.h  BlackHole.h  Disk.h  Galaxy.h  Scene.cpp  Scene.h  SceneObjectTuple.h  SkySphere.h  Texture.h
